调整字符串长度
git-svn-id: https://172.16.100.245:443/svn/yihunze@27 6ec6bfb8-d06b-6c47-a642-727affc0819e

--- a/server/yihunzeServer/bin/SimulateClient/debug/networker.cfg
+++ b/server/yihunzeServer/bin/SimulateClient/debug/networker.cfg
@@ -3,7 +3,8 @@ server = false
 #当为客端时指定服务器ip
 serverip = 172.16.100.245
 #端口号
-portnumber = 9999
+#portnumber = 9999
+portnumber = 60001
 #密码
 password = 8889
 
