--- a/server/yihunzeServer/yihunzeServer/yihunzeServer.vcproj
+++ b/server/yihunzeServer/yihunzeServer/yihunzeServer.vcproj
@@ -64,7 +64,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="RakNetDLLDebug.lib ws2_32.lib libmysql.lib xMain_d.lib"
-				OutputFile="../bin/stateserver/debug/$(ProjectName)_d.exe"
+				OutputFile="../bin/debug/$(ProjectName)_d.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(RakNet4.0)/lib&quot;;&quot;$(MYSQL)/lib&quot;;../Mainlib/lib"
 				GenerateDebugInformation="true"
@@ -92,7 +92,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy &quot;..\mainlib\lib\xmain_d.dll&quot;  &quot;..\bin\stateserver\debug&quot;&#x0D;&#x0A;copy  &quot;$(RakNet4.0)\lib\RakNetDebug.dll&quot;  &quot;..\bin\stateserver\debug&quot;&#x0D;&#x0A;copy  &quot;$(MYSQL)\lib\libmysql.dll&quot;  &quot;..\bin\stateserver\debug&quot;&#x0D;&#x0A;"
+				CommandLine=""
 			/>
 		</Configuration>
 		<Configuration
@@ -143,7 +143,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="libmysql.lib RakNetDLL.lib ws2_32.lib xmain.lib"
-				OutputFile="../bin/stateserver/release/$(ProjectName).exe"
+				OutputFile="../bin/release/$(ProjectName).exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(RakNet4.0)/lib&quot;;&quot;$(MYSQL)/lib&quot;;../Mainlib/lib"
 				GenerateDebugInformation="true"
@@ -204,10 +204,6 @@
 				RelativePath=".\LoginManager.cpp"
 				>
 			</File>
-			<File
-				RelativePath=".\player.cpp"
-				>
-			</File>
 		</Filter>
 		<Filter
 			Name="Í·ÎÄ¼þ"
@@ -248,10 +244,6 @@
 			</File>
 			<File
 				RelativePath=".\pch.h"
-				>
-			</File>
-			<File
-				RelativePath=".\player.h"
 				>
 			</File>
 		</Filter>
